--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
 
   <body>
 
-    <nav>
-      <ul>
+    <nav class="navbar">
+      <div class="logo-img">
         <img src="img/cupcake.png">
-        <li>Home</li>
-        <li>About</li>
-        <li>Recipes</li>
-        <li>Contact</li>
-      </ul>
+      </div>
+      <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Recipes</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+     </div>
     </nav>
 
     <div class="container">
