Shopping cart JS

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Recipes</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="shop.html">Shop</a></li>
+            <li><a href="index.html">Sign Up</a></li>
         </ul>
      </div>
     </nav>
@@ -55,6 +55,7 @@
         </div>
       </form>
      </div>
-    <script src="js/app.js"></script>
+    <script src="js/userForm.js"></script>
+    <script src="js/shop.js"></script>
   </body>
 </html>
