--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Form Validation</title>
+    <title>Bakery Website</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6e358658ed.js" crossorigin="anonymous"></script>
     <link href="css/styles.css" rel="stylesheet">
