--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
       <div class="dog-container">
         <img src="img/dog.png" alt="chocolate lab">
         <div class="dog-content">
-          <p class="sign-up-quote">Want to stay up-to-date on all our latest events and recipes? Get exclusice discounts and birthday rewards?</p>
+          <p class="sign-up-quote">Want to stay up-to-date on all our latest events and recipes? Get exclusive discounts and birthday rewards?</p>
           <button type="button" name="sign-up-btn">Sign Up!</button>
         </div>
       </div>
