--- a/about.html
+++ b/about.html
@@ -30,11 +30,34 @@
      </div>
     </nav>
 
+      <div class="home-header">
+          <h1>
+            <i class="fas fa-paw"></i>COOPER BAKERY<i class="fas fa-paw"></i>
+          </h1>
+      </div>
+
+
+    <div class="cooper-bg">
+      <div class="about-container">
+        <div class="about-text">
+          <p>
+            Cooper Bakery is named after a beloved pet and friend. A chocolate labrador who supplied love, warmth, and loved a good treat every now and then. Here at the bakery, we like to provide the same things to our customers. When you stop in to visit us, you can expect quality goods, baked fresh daily. We offer a variety of breads, sweet and savory goods, as well as a full coffee bar if you’re looking to cozy up and get some work done.
+          </p>
+          <p>
+            We are proud to partner with the ASPCA to give back to animals in need. A portion of our proceeds go to helping pets in your community. We also hold monthly adoption events so other potential Coopers can find a home with those looking to give one.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="about-images">
+      <img src="img/assorted-bread.jpg" alt="Assorted Breads">
+      <img src="img/choco-cake.jpg" alt="Assorted Breads">
+      <img src="img/coffee.jpg" alt="Assorted Breads">
+    </div>
 
 
 
-
-
+<div class="footer-sticky">
     <footer class="footer">
       <div class="footer-element footer-address">
         <div class="footer-info">
@@ -69,6 +92,7 @@
       <div class="copyright">
         <span>&copy;Cooper Bakery 2020</span>
       </div>
+    </div>
 
         <script src="js/index.js"></script>
       </body>
