--- a/signup.html
+++ b/signup.html
@@ -30,62 +30,45 @@
      </div>
     </nav>
 
-    <div class="container">
-      <div class="dog-container">
-        <img src="img/dog.png" alt="chocolate lab">
-        <div class="dog-content">
-          <p class="sign-up-quote">Want to stay up-to-date on all our latest events and recipes? Get exclusive discounts and birthday rewards?</p>
-          <button type="button" name="sign-up-btn">Sign Up!</button>
-        </div>
-      </div>
-
-      <div class="sign-up-text">
-        <h3 class="sign-up-main">Sign up for a free account!</h3>
-        <h5 class="sign-up-sub">Please enter a username</h5>
-      </div>
-      <form class="form">
-        <div class="name-field">
-            <i class="fas fa-user"></i>
-            <input type="text" placeholder="Username" required>
-            <i class="fas fa-arrow-down"></i>
-        </div>
-        <div class="email-field inactive">
-             <i class="fas fa-at"></i>
-            <input type="email" placeholder="Email" required>
-            <i class="fas fa-arrow-down"></i>
-        </div>
-        <div class="password-field inactive">
-            <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" required>
-            <i class="fas fa-arrow-down"></i>
-        </div>
-        <div class="finish-field inactive">
-            <p>Thank you </p>
-            <i class="fas fa-check-circle"></i>
-        </div>
-      </form>
+    <div class="home-header">
+        <h1>
+          <i class="fas fa-paw"></i>COOPER BAKERY<i class="fas fa-paw"></i>
+        </h1>
     </div>
 
-    <div class="sign-up-images">
-      <div class="sign-up-image">
-        <img src="img/cookies.jpg" alt="cookies">
+  <div class="sign-up-bg">
+    <div class="sign-up-main-container">
+      <div class="sign-up-info-container">
+        <h5 class="info-form-text">Stay up-to-date on our latest recipes, exclusive discounts and birthday rewards by signing up for a personalized account!</h5>
       </div>
-      <div class="sign-up-image">
-        <img src="img/cake.jpg" alt="cake">
-      </div>
-      <div class="sign-up-image">
-        <img src="img/muffins.jpg" alt="muffins">
-      </div>
-      <div class="sign-up-image">
-        <img src="img/ice-cream.jpg" alt="ice-cream">
-      </div>
-      <div class="sign-up-image">
-        <img src="img/cream-puff.jpg" alt="cream-puffs">
-      </div>
-      <div class="sign-up-image">
-        <img src="img/cupcakes.jpg" alt="cupcakes">
+      <div class="sign-up-form-container">
+        <div class="form-content">
+          <h5 class="form-text">Please enter a username...</h5>
+          <div class="form-inputs">
+            <div class="name-field">
+                <i class="fas fa-user"></i>
+                <input type="text" placeholder="Username" required>
+                <i class="fas fa-arrow-down"></i>
+            </div>
+            <div class="email-field inactive">
+                 <i class="fas fa-at"></i>
+                <input type="email" placeholder="Email" required>
+                <i class="fas fa-arrow-down"></i>
+            </div>
+            <div class="password-field inactive">
+                <i class="fas fa-lock"></i>
+                <input type="password" placeholder="Password" required>
+                <i class="fas fa-arrow-down"></i>
+            </div>
+            <div class="finish-field inactive">
+                <p>Thank you </p>
+                <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+</div>
 
 <div class="footer-sticky">
     <footer class="footer">
