--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      </div>
     </nav>
 
-    <div class="home-page-container">
+    <div class="home-page-bg">
       <div class="home-header">
           <h1>
             <i class="fas fa-paw"></i>COOPER BAKERY<i class="fas fa-paw"></i>
