--- a/shop.html
+++ b/shop.html
@@ -29,9 +29,14 @@
         </ul>
      </div>
     </nav>
+      <div class="home-header">
+          <h1>
+            <i class="fas fa-paw"></i>COOPER BAKERY<i class="fas fa-paw"></i>
+          </h1>
+      </div>
 
-    <div class="container">
-        <section>
+    <div class="container shop-bg">
+        <section class="shop-container">
           <h1 class="shopping-title">Bring the Sweetness Home!</h1>
           <div class="shop-items">
             <div class="shop-item">
@@ -82,10 +87,26 @@
                 <button class="add-to-cart-button" type="button">Add to Cart</button>
               </div>
             </div>
+            <div class="shop-item">
+              <span class="shop-item-name">Donuts</span>
+              <img class="shop-item-image" src="img/donut.jpg">
+              <div class="shop-item-details">
+                <span class="shop-item-price">$2.00</span>
+                <button class="add-to-cart-button" type="button">Add to Cart</button>
+              </div>
+            </div>
+            <div class="shop-item">
+              <span class="shop-item-name">Croissant</span>
+              <img class="shop-item-image" src="img/croissants.jpg">
+              <div class="shop-item-details">
+                <span class="shop-item-price">$4.00</span>
+                <button class="add-to-cart-button" type="button">Add to Cart</button>
+              </div>
+            </div>
           </div>
-       </section>
 
-       <section>
+
+
         <h2 class="cart-title">CART</h2>
         <div class="cart-row">
             <span class="cart-item cart-header cart-column">ITEM</span>
