--- a/signup.html
+++ b/signup.html
@@ -47,17 +47,17 @@
           <div class="form-inputs">
             <div class="name-field">
                 <i class="fas fa-user"></i>
-                <input type="text" placeholder="Username" required>
+                <input class="input" type="text" placeholder="Username" required>
                 <i class="fas fa-arrow-down"></i>
             </div>
             <div class="email-field inactive">
                  <i class="fas fa-at"></i>
-                <input type="email" placeholder="Email" required>
+                <input class="input" type="email" placeholder="Email" required>
                 <i class="fas fa-arrow-down"></i>
             </div>
             <div class="password-field inactive">
                 <i class="fas fa-lock"></i>
-                <input type="password" placeholder="Password" required>
+                <input class="input" type="password" placeholder="Password" required>
                 <i class="fas fa-arrow-down"></i>
             </div>
             <div class="finish-field inactive">
